--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>Fried chicken</li>
             </ul>
             <p style="font-size: 40px;color: tomato;text-align:center; margin: 10px 0 0 20px;">
-                we offers best fast food in town 
+                我们提供城里最好的快餐
             </p>
         </div>
 
